--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
 
         <script src="js/libs/jquery.js"></script>
         <script type="text/javascript" src="phonegap.js"></script>
+        <script type="text/javascript" src="childbrowser.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
