--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
         </div>
 
         <script src="js/libs/jquery.js"></script>
+        <script src="js/libs/tap.js"></script>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="childbrowser.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
